# archit

./: .editorconfig  .gitignore  Makefile  README.md  environment.yml  pyproject.toml
gateway/: .env  Makefile
gateway/gateway/: main.py
gateway/gateway/routers/: client.py
gateway/src/: main.py
gateway/src/routers/: client.py
getway/: Makefile
strawberry_sandbox/: Makefile
strawberry_sandbox/strawberry_sandbox/: fakers.py  models.py  schema.py
